<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/g2"
        android:checkableBehavior="single">
        <item
            android:title="@string/about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:id="@+id/about"/>
        <item
            android:title="@string/help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:id="@+id/help"/>
        <item
            android:title="@string/rate"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:id="@+id/rate"/>
        <item
            android:title="@string/share"
            android:icon="@drawable/ic_share_black_24dp"
            android:id="@+id/share"/>

    </group>
</menu>